# fydp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main_ekf.cpp  test_ekf.cpp  tests.cpp
bmb_actuators/: CMakeLists.txt  package.xml
bmb_control/: CMakeLists.txt  package.xml  setup.py
bmb_control/launch/: bringup.launch  keyboard_control.launch
bmb_control/nodes/: keyboard_state_commander_node.py
bmb_control/scripts/: setup_vm.sh
bmb_controllers/: CMakeLists.txt  package.xml
bmb_controllers/cad/: DubinsPathToPoint.SLDPRT
bmb_controllers/config/: reference_trajectory_loop.csv
bmb_controllers/launch/: bringup.launch  controllers.launch
bmb_controllers/scripts/: generate_reference_trajectory_loop.py
bmb_controllers/src/: Controller.cpp  GlobalPathPlanner.cpp  GlobalPathPlannerControlLoop.cpp  GlobalPathPlannerNode.cpp  LocalPathPlanner.cpp  LocalPathPlannerControlLoop.cpp  LocalPathPlannerNode.cpp  LowLevelControlLoop.cpp  LowLevelControlLoopNode.cpp
bmb_controllers/test/: TestDubinsPath.cpp  TestDubinsPath.h  TestPID.cpp  TestPurePursuit.cpp
bmb_description/: CMakeLists.txt  package.xml
bmb_description/cad/: Assembly for Gazebo.SLDASM  ElevatorAssembly.SLDASM  Left_Aileron.STL.SLDASM  Propeller_Yeet.SLDASM
bmb_description/launch/: spawn_aris.launch  spawn_bmb.launch
bmb_description/meshes/: AileronAssembly.STL  ElevatorAssembly.STL  Left_Aileron.STL  Propeller_Assembly.STL  Right_Aileron.STL  elevator.stl  left_aileron.stl  right_aileron.stl
bmb_description/sdf/: model.config  model.sdf
bmb_description/urdf/: aris.urdf.xacro
bmb_differentiation/: CMakeLists.txt  package.xml
bmb_differentiation/test/: TestCompiledDifferentiation.cpp  TestCompiledDifferentiation.h  TestDifferentiation.cpp  TestDifferentiation.h  TestRatioPower.cpp  TestRatioPower.h  TestRuntimeDifferentiation.cpp  TestTypeArray.cpp
bmb_gazebo/: CMakeLists.txt  package.xml
bmb_gazebo/launch/: aris_world.launch  cessna_world.launch  empty_world.launch  my_world.launch  spawn_bmb.launch
bmb_gazebo/src/: ARISControlPlugin.cpp  ARISGazeboPlugin.cpp
bmb_gazebo/worlds/: aris_world.world  empty_world.world
bmb_math/: CMakeLists.txt  package.xml
bmb_math/src/: MessageUtilities.cpp  Primes.cpp  Wrench.cpp
bmb_math/test/: TestFourier.cpp  TestFourier.h  TestMatrix.cpp  TestPID.cpp  TestPID.h  TestPolynomial.cpp  TestPolynomial.h  TestPrimes.cpp  TestQuaternion.cpp  TestRationalFunction.cpp  TestTransferFunction.cpp  TestVector.cpp  TestVector3.cpp
bmb_msgs/: CMakeLists.txt  package.xml
bmb_msgs/msg/: AircraftState.msg  ControlInputs.msg  OpticalFlowReading.msg  RailDetection.msg  ReferenceCommand.msg  SensorMeasurements.msg  StateCommand.msg
bmb_msgs/src/: AircraftState.cpp  ControlInputs.cpp  SensorMeasurements.cpp
bmb_sensors/: CMakeLists.txt  package.xml
bmb_sensors/include/: SimSensorsNode.h
bmb_sensors/launch/: sensors.launch
bmb_sensors/src/: SimSensorsNode.cpp
bmb_state_estimation/: CMakeLists.txt  package.xml
bmb_state_estimation/launch/: state_estimation.launch
bmb_state_estimation/src/: BasicSensorFilter.cpp  EKF.cpp  KF.cpp  OmniscientStateEstimationNode.cpp  SensorFilter.cpp  StateEstimationControlLoop.cpp  StateEstimationNode.cpp  UKF.cpp  state_estimation_node.cpp
bmb_utilities/: CMakeLists.txt  package.xml
bmb_utilities/include/bmb_utilities/: ConstexprUtils.h  ControllerGains.h  CoordinateSystems.h  MathUtils.h  MessageUtilities.h  ScopedTimer.h  TypeArray.h
bmb_utilities/src/: MessageUtilities.cpp
bmb_utilities/test/: TestConstexprUtils.cpp  TestTypeArray.cpp
bmb_vision/: CMakeLists.txt  package.xml  setup.py
bmb_vision/launch/: vision.launch
bmb_vision/nodes/: defisheye_node.py  optical_flow_node.py  rail_detection_node.py
bmb_world_model/: CMakeLists.txt  package.xml
bmb_world_model/src/: AppliedLoads.cpp  SensorModels.cpp  WrenchUtilities.cpp
include/: AircraftState.h  AppliedLoads.h  Constants.h  ControlInputs.h  EKF.h  KF.h  Matrix.h  Matrix3D.h  Quaternion.h  ReferenceCommand.h  SensorMeasurements.h  SensorModels.h  UKF.h  Vector.h  Vector3.h  Wrench.h
include/compiled_differentiation/: CConstant.h  CCos.h  CDeepSimplify.h  CDerivative.h  CDifference.h  CExp.h  CGetOperands.h  CHigherDerivative.h  CLog.h  CMultiSum.h  CNodeCount.h  CPower.h  CProduct.h  CQuotient.h  CSimplify.h  CSin.h  CSum.h  CVariable.h  TypeArray.h
include/controller/: Controller.h  DubinsPath.h  PID.h  PIDGains.h  Polynomial.h  PurePursuit.h  RationalFunction.h  TestPolynomial.h  TransferFunction.h
include/differentiation/: BinaryOperator.h  Constant.h  Cos.h  Difference.h  Expression.h  ExpressionPointer.h  Log.h  Nan.h  One.h  Power.h  Product.h  Quotient.h  Sin.h  Sum.h  UnaryOperator.h  Variable.h  Zero.h
include/kalman_filter/: BasicSensorFilter.h  EKF.h  KF.h  SensorFilter.h  UKF.h
include/numc/: Accel.h  Fourier.h  Matrix.h  Matrix3D.h  Primes.h  Quaternion.h  Vector.h  Vector3.h  Wrench.h  prime.h
include/utils/: MathUtils.h  ScopedTimer.h  math_utils.h
matplotlib-cpp/: CMakeLists.txt
src/: AircraftState.cpp  AircraftState.h  AppliedLoads.cpp  ControlInputs.cpp  EKF.cpp  KF.cpp  Matrix.h  PID.cpp  PID.h  Quaternion.cpp  RailLocation.h  SensorMeasurements.cpp  SensorMeasurements.h  SensorModels.cpp  UKF.cpp  Vector3.cpp
src/controller/: Controller.cpp
src/differentiation/: BinaryOperator.cpp  Constant.cpp  Cos.cpp  Difference.cpp  Exp.cpp  Expression.cpp  ExpressionPointer.cpp  Log.cpp  Nan.cpp  One.cpp  Power.cpp  Product.cpp  Quotient.cpp  Sin.cpp  Sum.cpp  UnaryOperator.cpp  Variable.cpp  Zero.cpp
test/: TestCompiledDifferentiation.cpp  TestDifferentiation.cpp  TestDubinsPath.cpp  TestFourier.cpp  TestMatrix.cpp  TestMatrix.h  TestPolynomial.cpp  TestPrimes.cpp  TestPrimes.h  TestPurePursuit.cpp  TestPurePursuit.h  TestQuaternion.cpp  TestQuaternion.h  TestRatioPower.cpp  TestRationalFunction.cpp  TestRationalFunction.h  TestTransferFunction.cpp  TestTransferFunction.h  TestTypeArray.cpp  TestTypeArray.h  TestVector.cpp  TestVector.h  TestVector3.cpp  TestVector3.h
(+127 files in other folders)
