cmake_minimum_required(VERSION 3.17)
project(FYDP)

set(CMAKE_CXX_STANDARD 20)

include_directories(./include)
include_directories(./include/differentiation)
include_directories(./include/compiled_differentiation)
include_directories(./include/numc)
include_directories(./include/kalman_filter)
include_directories(./include/utils)
include_directories(./include/controller)

add_executable(FYDP
        bmb_state_estimation/src/SensorFilter.cpp
        bmb_state_estimation/src/BasicSensorFilter.cpp
        bmb_state_estimation/src/KF.cpp
        bmb_state_estimation/src/UKF.cpp
        bmb_state_estimation/src/EKF.cpp
        bmb_controllers/src/Controller.cpp
        bmb_msgs/src/SensorMeasurements.cpp
        bmb_msgs/src/AircraftState.cpp
        bmb_msgs/src/ControlInputs.cpp
        bmb_world_model/src/AppliedLoads.cpp
        bmb_world_model/src/SensorModels.cpp
        bmb_differentiation/src/runtime/Expression.cpp
        bmb_differentiation/src/runtime/Constant.cpp
        bmb_differentiation/src/runtime/Zero.cpp
        bmb_differentiation/src/runtime/One.cpp
        bmb_differentiation/src/runtime/Nan.cpp
        bmb_differentiation/src/runtime/Variable.cpp
        bmb_differentiation/src/runtime/BinaryOperator.cpp
        bmb_differentiation/src/runtime/UnaryOperator.cpp
        bmb_differentiation/src/runtime/Sum.cpp
        bmb_differentiation/src/runtime/Difference.cpp
        bmb_differentiation/src/runtime/Product.cpp
        bmb_differentiation/src/runtime/Quotient.cpp
        bmb_differentiation/src/runtime/Power.cpp
        bmb_differentiation/src/runtime/Exp.cpp
        bmb_differentiation/src/runtime/Log.cpp
        bmb_differentiation/src/runtime/Sin.cpp
        bmb_differentiation/src/runtime/Cos.cpp
        bmb_math/src/Wrench.cpp
        bmb_math/src/Primes.cpp
        bmb_math/test/TestVector.cpp
        bmb_math/test/TestVector3.cpp
        bmb_math/test/TestQuaternion.cpp
        bmb_math/test/TestMatrix.cpp
        bmb_differentiation/test/TestDifferentiation.cpp
        bmb_differentiation/test/TestCompiledDifferentiation.cpp
        bmb_differentiation/test/TestRatioPower.cpp
        bmb_utilities/test/TestTypeArray.cpp
        bmb_math/test/TestPrimes.cpp
        bmb_math/test/TestFourier.cpp
        bmb_controllers/test/TestDubinsPath.cpp
        bmb_controllers/test/TestPurePursuit.cpp
        bmb_math/test/TestPolynomial.cpp
        bmb_math/test/TestRationalFunction.cpp
        bmb_math/test/TestTransferFunction.h
        bmb_math/test/TestTransferFunction.cpp
        )
